2008-08-16  Philip Withnall  <philip@tecnocode.co.uk>

	* src/main.c: (main): Ensure the user's data directory exists before
	creating the database file. (Closes: #543963)

2008-08-16  Philip Withnall  <philip@tecnocode.co.uk>

	* data/almanah.desktop.in:
	* src/main-window.c: (mw_about_activate_cb): Patch from Mikel
	Olasagasti <hey_neken@mundurat.net> to fix icons in the about dialogue
	and main window. (Closes: #543739)

============ Version 0.4.0

2008-07-10  Philip Withnall  <philip@tecnocode.co.uk>

	* NEWS:
	* configure.ac: Bump to version 0.4.0.
	* data/icons/16x16/Makefile.am:
	* data/icons/22x22/Makefile.am:
	* data/icons/32x32/Makefile.am:
	* data/icons/48x48/Makefile.am: Included icon SVGs in tarball.
	Updated svn:ignore lists.

2008-07-08  Philip Withnall  <philip@tecnocode.co.uk>

	* README:
	* configure.ac:
	* data/Makefile.am:
	* data/almanah.desktop.in:
	* data/almanah.ui:
	* data/diary.desktop.in:
	* data/diary.ui:
	* data/icons/16x16/Makefile.am:
	* data/icons/16x16/diary.svg:
	* data/icons/22x22/Makefile.am:
	* data/icons/22x22/diary.svg:
	* data/icons/32x32/Makefile.am:
	* data/icons/32x32/diary.svg:
	* data/icons/48x48/Makefile.am:
	* data/icons/48x48/diary.svg:
	* src/Makefile.am:
	* src/interface.c: (diary_create_interface):
	* src/main.c: (main): Changed the application name from "Diary" to
	"Almanah Diary", and the executable from "diary" to "almanah" to make
	it less generic. Some data files have moved around, orphaning the old
	ones, but the database is still in the same place and retains the old
	schema.

2008-07-06  Philip Withnall  <philip@tecnocode.co.uk>

	* src/links/file.c:
	* src/links/note.c:
	* src/links/uri.c: Fixed licence header to read GPLv3+, rather than
	GPLv2+. These files were accidentally skipped when relicencing on
	2008-04-03.

2008-07-06  Philip Withnall  <philip@tecnocode.co.uk>

	* data/diary.ui:
	* src/interface.c: (diary_create_interface),
	(diary_interface_embolden_label):
	* src/interface.h: